--- a/RepasoPrograII20210531/SQLLogica/SQLLogica.csproj
+++ b/RepasoPrograII20210531/SQLLogica/SQLLogica.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{438E3A2D-5D8D-45A0-960E-A2FF12E36AEC}</ProjectGuid>
+    <ProjectGuid>{6D39BAF9-9B6E-4CB7-8573-C799A3279786}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Application</RootNamespace>
-    <AssemblyName>Application</AssemblyName>
+    <RootNamespace>SQLLogica</RootNamespace>
+    <AssemblyName>SQLLogica</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,23 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions\TechnicalException.cs" />
-    <Compile Include="Helpers\Logger.cs" />
+    <Compile Include="CustomerDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CustomerRepository.cs" />
-    <Compile Include="Repositories\CustomerRepositorySQL.cs" />
-    <Compile Include="Repositories\RepositoryBase.cs" />
-    <Compile Include="CustomerSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Application.Common\Application.Common.csproj">
-      <Project>{532b3886-e825-457d-a362-d2d6b62c5281}</Project>
-      <Name>Application.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Application.Files\Application.Files.csproj">
-      <Project>{9d9384e1-3d03-436c-8bca-87eb963c278d}</Project>
-      <Name>Application.Files</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Application.Models\Application.Models.csproj">
       <Project>{fab8b881-7bc0-4aef-9888-2f7eed2da536}</Project>
       <Name>Application.Models</Name>
